src/test/compile-fail/fail-type-err.rs
// error-pattern:expected str but found vec
// xfail-stage0
fn main() { fail []; }